<resources>
    <string name="app_name">Tutorial 06</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="logout_name">Logout</string>
    <string name="welcome_name">Welcome</string>
</resources>